--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,25 @@
     background-color: gray;
     position: fixed;
     z-index: 1060;
+    -webkit-transition: right 0.2s;
+    transition: right 0.2s;
+}
+
+.cartmenuopen {
+    right: 0em;
 }
 
 .seecartmenu {
     position: fixed;
     right: 0em;
     width: 5em;
+    -webkit-transition: right 0.2s;
+    transition: right 0.2s;
+}
+
+.seecartmenuopen {
+    right: 20em;
+    transition: right 0.2s;
 }
 
 img {
