--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,10 +75,13 @@ img {
     border-radius: 0.5em;
     border-color: white;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .cartmenu-element:hover {
     background-color: var(--green-4);
+    color: var(--light-yellow);
 }
 
 .cartmenu-title {
