--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,89 +1,75 @@
-:root {
-    --green-1: #597C2B;
-    --green-2: #668D2E;
-    --green-3: #80A142;
-    --green-4: #91B247;
-    --green-5: #D2E459;
-
-    --light-yellow: #ECDF60;
-    --dark-yellow: #ECCA11;
-    --background1: #EBEDCF;
-    --background2: rgb(255, 247, 174);
-}
-
 #root {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(232, 253, 214);
-    color: rgb(70, 70, 70);
+  background-color: #14664e;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  min-height: 100vh;
+  color: #bac9bd;
 }
 
 .cartmenu {
-    height: 100vh;
-    width: 20em;
-    right: -20em;
-    background-color: var(--green-3);
-    position: fixed;
-    z-index: 1060;
-    -webkit-transition: right 0.2s;
-    transition: right 0.2s;
+  background-color: #13415c;
+  height: 100vh;
+  width: 20em;
+  right: -20em;
+  z-index: 1060;
+  position: fixed;
+  transition: right 0.2s;
+  -webkit-transition: right 0.2s;
 }
 
 .cartmenuopen {
-    right: 0em;
+  right: 0em;
 }
 
-.seecartmenu {
-    z-index: 1060;
-    position: fixed;
-    right: -0.2em;
-    font-size: 15em;
-    width: 6em;
-    height: 4em;
-    -webkit-transition: right 0.2s;
-    transition: right 0.2s;
+.cartmenubutton {
+  z-index: 1060;
+  position: fixed;
+  right: -0.2em;
+  font-size: 15em;
+  width: 6em;
+  height: 4em;
+  -webkit-transition: right 0.2s;
+  transition: right 0.2s;
 }
 
-.seecartmenuopen {
-    right: 19.8em;
-    transition: right 0.2s !important;
+.cartmenubuttonopen {
+  right: 19.8em;
+  -webkit-transition: right 0.2s !important;
+  transition: right 0.2s !important;
 }
 
 .highlight {
-    border-style: solid;
-    border-width: 2px;
-    border-color: gray;
-    border-radius: 1px;
-}
-
-.item {
-    background-color: var(--tile-col);
+  border-style: solid;
+  border-width: 2px;
+  border-color: gray;
+  border-radius: 1px;
 }
 
 img {
-    width: inherit;
+  width: inherit;
 }
 
 .cartmenu-title {
-    text-align: center;
+  text-align: center;
 }
 
 .cartmenu-element {
-    background-color: var(--green-5);
-    color: var(--green-1);
-    border-style: solid;
-    border-width: 0.1em;
-    border-radius: 0.5em;
-    border-color: white;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+  background-color: #13415c;
+  color: #70d6c5;
+  border-style: solid;
+  border-width: 0.1em;
+  border-radius: 0.5em;
+  border-color: gray;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cartmenu-element:hover {
-    background-color: var(--green-4);
-    color: var(--light-yellow);
+  background-color: #547e7a;
+  color: #70d6c5;
 }
 
 .cartmenu-title {
-    color: rgb(189, 255, 187);
+  color: #70d6c5;
 }
+/*# sourceMappingURL=index.css.map */
