--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
 #root {
-  background-color: #14664e;
+  background-color: #d5e8fd;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   min-height: 100vh;
-  color: #bac9bd;
+  color: #353635;
 }
 
 .cartmenu {
-  background-color: #13415c;
+  background-color: #6ad0ff;
   height: 100vh;
   width: 20em;
   right: -20em;
@@ -53,8 +53,8 @@ img {
 }
 
 .cartmenu-element {
-  background-color: #13415c;
-  color: #70d6c5;
+  background-color: #6ad0ff;
+  color: #383f3e;
   border-style: solid;
   border-width: 0.1em;
   border-radius: 0.5em;
@@ -65,11 +65,11 @@ img {
 }
 
 .cartmenu-element:hover {
-  background-color: #547e7a;
+  background-color: #d7f1ef;
   color: #70d6c5;
 }
 
 .cartmenu-title {
-  color: #70d6c5;
+  color: #374240;
 }
 /*# sourceMappingURL=index.css.map */
