--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,7 +37,7 @@
   transition: right 0.2s !important;
 }
 
-.highlight {
+.highlight:hover {
   border-style: solid;
   border-width: 2px;
   border-color: gray;
