--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
 #root {
-  background-color: #d5e8fd;
+  background-color: #f3f3f3;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   min-height: 100vh;
   color: #353635;
 }
 
 .cartmenu {
-  background-color: #6ad0ff;
+  background-color: #dadada;
   height: 100vh;
   width: 20em;
   right: -20em;
@@ -53,8 +53,8 @@ img {
 }
 
 .cartmenu-element {
-  background-color: #6ad0ff;
-  color: #383f3e;
+  background-color: #dadada;
+  color: black;
   border-style: solid;
   border-width: 0.1em;
   border-radius: 0.5em;
@@ -65,8 +65,8 @@ img {
 }
 
 .cartmenu-element:hover {
-  background-color: #d7f1ef;
-  color: #70d6c5;
+  background-color: white;
+  color: black;
 }
 
 .cartmenu-title {
