--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 #root {
-  background-color: #f3f3f3;
+  background-color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   min-height: 100vh;
   color: #353635;
@@ -71,5 +71,10 @@ img {
 
 .cartmenu-title {
   color: #374240;
+}
+
+.item-image {
+  width: 100%;
+  height: 50%;
 }
 /*# sourceMappingURL=index.css.map */
